--- a/turbo-molotov/client/package.json
+++ b/turbo-molotov/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
+    "@mui/x-data-grid": "^5.17.23",
     "@mui/x-date-pickers": "^5.0.15",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
